Fixed active button states on mobile

--- a/css/mobile.less
+++ b/css/mobile.less
@@ -216,6 +216,9 @@ body {
 			border-radius: 15px;
 			margin: .5em .5em;
 			-webkit-tap-highlight-color: rgba(0,0,0,0);
+			&:active {
+				border: 2px inset fadeout(@White, 35%);
+			}
 		}
 
 		.active {
